@@ -291,6 +291,7 @@ library_libproc2_la_SOURCES = \
 	library/include/readproc.h \
 	library/slabinfo.c \
 	library/include/slabinfo.h \
+	library/signames.c \
 	library/stat.c \
 	library/include/stat.h \
 	library/sysinfo.c \
@@ -329,7 +330,6 @@ src_ps_pscommand_SOURCES =  \
 	src/ps/output.c \
 	src/ps/parser.c \
 	src/ps/select.c \
-	src/ps/signames.c \
 	src/ps/sortformat.c \
 	src/ps/stacktrace.c \
 	local/fileutils.c \
